server/sonar-web/src/main/less/layout.less
@import (reference) "mixins";
@import (reference) "variables";
@import (reference) "ui";

@media print {
  /* ------------------- PRINT ------------------- */
  html, body {
    font-size: 8pt;
  }

  a, a:link, a:visited {
    text-decoration: none;
    border-bottom: 0;
  }

  .noprint {
    display: none !important;
  }

  .print {
    display: inline;
    position: static;
    left: 0;
  }

  #hd, #sidebar, #crumbs {
    display: none;
  }

  .with_sidebar, .wo_sidebar {
    padding: 0 !important;
    margin: 0;
  }

  #content {
    margin-left: 0 !important;
  }

  .widget thead, .widget tfoot {
    // Fix for phantomjs bug about wrapping tables
    display: table-row-group;
  }
}

@media screen {
  .print {
    display: none;
  }
}

body, a {
  color: #444;
}

/* LAYOUT */
#container {
  height: auto !important;
  min-width: 940px;
  min-height: 500px;
}

#hd {
  color: #FFF;
  background: #262626;
  padding: 0 10px;
  height: 30px;
  line-height: 30px;
  font-size: 93%;
  margin: 0;
  position: relative;
}

#hd #nav-left > ul > li {
  height: 30px;
}

#hd a {
  color: #fff;
  .link-no-underline;

  &.selected, &:hover, &:focus { color: @blue; }
}

#nav-left {
  float: left;
  vertical-align: middle;
}

#nav {
  float: right;
  padding: 0 0 0 20px;
  vertical-align: middle;
}

#nav-left img, #nav img {
  vertical-align: text-bottom;
}

#nav-left > ul > li {
  float: left;
  padding: 0 20px 0 0;
}

#nav-left > ul > li > a,
#nav > ul > li > a {
  font-size: @smallFontSize;
  font-weight: 300;
  letter-spacing: 0.05em;
}

#nav > ul > li {
  float: right;
  height: 30px;
  padding: 0 0 0 15px;
}

#searchResourcesResults {
  position: absolute;
  float: right;
  width: 600px;
  top: 30px;
  right: 0;
}

#crumbs {
  color: #444;
  background: #EFEFEF;
  height: 26px;
  line-height: 26px;
  font-size: 93%;
  margin: 0;
  padding: 0 10px;
  border-bottom: 1px solid #CCC;
}

#crumbs img {
  vertical-align: text-bottom;
}

#bc li {
  float: left;
  background: #EFEFEF url("../images/bc-gray.png") no-repeat right;
  border-bottom: 1px solid #CCC;
  padding: 0 20px 0 0;
  margin: 0 10px 0 0;
}

#bc li img {
  margin-right: -5px;
}

#bc li a {
  .link-no-underline;
}

#crumbs-ops {
  float: right;
  padding: 0 5px 0 0;
}

#crumbs-ops li {
  float: left;
  padding: 0 0 0 10px;
}

#crumbs-ops li a {
  .link-no-underline;
}

#hd .dropdown-menu a {
  color: #000;
}

#project-settings-menu {
  float: right;
  right: 20px;
}

#nonav {
  text-align: left;
  margin: 50px 180px 0;
}

#footer {
  padding: 4px 0;
  clear: both;
}

#body {
  position: relative;
}

.with_sidebar {
  margin: 0 0 0 160px;
  padding: 10px;
}

.wo_sidebar {
  margin: 0 8px;
}

#sidebar {
  position: absolute;
  top: 0; left: 10px;
  width: 150px;

  &.sticky {
    position: fixed;
  }
}

ul.sidebar {
  text-align: left;
  border-top: none;
  padding: 10px 0;
}

ul.sidebar li {
  list-style-type: none;
  padding: 3px 10px;
}

ul.sidebar li > a {
  .link-no-underline;
}

ul.sidebar li.active {
  background-color: #4b9fd5;
}

ul.sidebar li.active a, ul.sidebar li.active a:hover {
  color: #FFF;
}

ul.sidebar li.active [class^="icon-"],
ul.sidebar li.active [class*=" icon-"] {
  color: #FFF;
}

li.sidebar-title {
  text-transform: uppercase;
  font-size: 93%;
  font-weight: bold;
}

ul.sidebar li.spacer {
  border: 0 none;
  height: 10px;
  margin: 0;
  padding: 0;
}

ul.sidebar select, ul.sidebar input {
  font-size: 93%;
}

#logo {
  text-align: center;
  padding: 10px 0 0 0;
}

#logo a {
  text-decoration: none;
  border-bottom-width: 0;
}

#logo img {
  display: block;
}

.page {
  padding: 10px;
}
.page-split-left {
  min-width: 200px;
  max-width: 200px;
  width: 200px;
  margin: 0;
  display: block;
  vertical-align: top;
  border-top: none;
  border-left: none;
  float: left;
}

.page-split-right {
  display: block;
  margin: 0;
  vertical-align: top;
  padding: 0 0 0 200px;
}

.gray-sidebar {
  background-color: #EFEFEF;
  border: 1px solid #CCC;
  color: #666;
  border-top: none;
}

.blue-sidebar {
  height: 100%;
  border-left: 1px solid @blue;
  border-right: 1px solid @blue;
  border-bottom: 1px solid @blue;
  background-color: @lightBlue;
  color: @baseFontColor;
}

.nolayout {
  padding: 10px;
}

